source/css/gtb.css
/* ... */
a.gtb-selecteer-woordsoortgroep.off:before {
    content: 'alles aanvinken';
}

a.gtb-selecteer-woordsoortgroep.on:before {
    content: 'alles uitvinken ';
}

div.gtb-cell-reduced {
    height: 3em;
    max-height: 3em;
    overflow-y:auto;
    cursor: pointer;
}

div.gtb-cell-expanded {
    min-height: 3em;
    cursor: pointer;
}

ul.gtb-list-subject-level2 li {
    margin-left: 1em;
}

.gtb-homoniemnr{
    vertical-align: super;
    font-size: 80%;
}

.gtb-pagineringsknoppen{
    float: right;
}
.resultaatknop {
    margin-top: 1.5em;
}

/*  Verberg de resultaatknoppen in de auxiliaries-sectie, maar toon ze wanneer ze worden opgeroepen in de content. */
.auxiliaries > .gtb-resultaatknoppen {
    display: none;
}

.gtb-typeahead-word {
    font-weight: bold;
}

.gtb-typeahead-wdb {
    font-style: italic;
    padding-left: 4em;
    float: right;
}

/* color variables for testing */
:root {
    --dark-blue: #00042E;
    --light-blue: #111971;
    --light-blue-darker: #111971;
}

/* Bootstrap */

.tab-content {
    margin: 25px 15px;
}

.form-horizontal .checkbox-inline {
    vertical-align: baseline;
}

.pagination {
    margin: 0px;
}

.pagination > li {
    display: inline-block;
}

.pagination > li > ul {
    /* geen float, anders wordt de baseline van de button anders en aligned de boel niet meer met andere buttons */
    /* Alleen opletten dat we geen whitespace tussen closers en openers hebben in de html... zie https://css-tricks.com/fighting-the-space-between-inline-block-elements/ */
    float: none;
    display: inline-block;
}

/* tabs */
/* tabs */
.nav-tabs {
    border-bottom: 2px solid #DDD;
}

.nav-tabs>li>a {
    border: none;
    color: #666;
    margin-right: 0px;
    background: transparent;
    text-align:center;
}
/* 
 * Maak ruimte voor bold text door een invisible elementje te maken met daarin de alvast gebolde text
 * op basis van de title attribute
 * Dit zodat de tabjes niet breder worden bij hoveren omdat de text bold (en daarmee breder) wordt 
 */
.nav-tabs > li > a::before {
  content: attr(title);
  display: block;
  font-weight: bold;
  height: 1px;
  margin-top: -1px;
  color: transparent;
  opacity: 0;
}

.nav-tabs>li>a:hover,
.nav-tabs>li>a:focus,
.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover{
    background-color: transparent;
    color: var(--light-blue);
    border: none;
}

.nav-tabs>li>a::after {
    content: "";
    background-color: var(--light-blue);
    height: 2px;
    position: absolute;
    width: 100%;
    left: 0px;
    bottom: -1px;
    transition: all 250ms ease 0s;
    transform: scale(0);
}

.nav-tabs>li.active>a::after,
.nav-tabs>li:hover>a::after {
    transform: scale(1);
}

.tab-nav>li>a::after {
    background: #21527d none repeat scroll 0% 0%;
    color: #fff;
}

/* collapse */

/* Disable sliding effect van collapse */
.collapsing {
    transition-duration: 0s;
    transition-property: none;
}

/* 
 * Zorg dat margins van alle child elementen binnen onze collapse wrapper blijft, en niet collapsed met elementen buiten de wrapper.
 * 
 * Waarom? nou, terwijl een bootstrap collapse element aan het in/uitklappen is, heeft hij overflow:hidden
 * Dit is logisch omdat het collapsen alleen maar de height naar 0px schaalt en dan display:none doet.
 * Als het zou kunnen overflowen zou je het collapsen niet kunnen zien.
 * 
 * Een bij-effect hiervan is dat de margins van het bovenste/onderste child in het collapse element tijdens het in/uitklappen
 * niet langer overlappen met de margins van elementen boven/onder de container. 
 * Dit zorgt er voor dat wanneer zo'n overlap groter is dan een paar px, 
 * de boel tijdelijk verspringt tijdens het in/uitklappen.
 * 
 * Hiermee kunnen we zorgan dat die margins in de eerste plaats al niet overlappen
 * gewoon altijd overflow:hidden zetten is een andere manier van dit doen, maar dan is je overflow weer niet zichtbaar meer
 * en overflowen is wel handig om dingen als carets voor child collapsibles over de linkerkant van de container laten hangen. 
 */
.gtb-collapse {
    padding-left: 15px;
	content: "";
    display: block;
    height: 1px;
    margin-bottom: -1px;
}

.gtb-collapse-label {
    font-weight: bold;
    margin-bottom: 5px;
}

.gtb-collapse-label > a {
    position: relative;
}
.gtb-collapse-label > a > .fa {
    position: relative;
    left: -15px;
    width: 0px;
    overflow: visible;
}
.gtb-collapse-label > a[aria-expanded="true"] > .fa-caret-right {
    display: none;
}
.gtb-collapse-label > a:not([aria-expanded="true"]) > .fa-caret-down {
    display: none;
}

/*  woordsoorten */
.gtb-woordsoort-container {
    padding-left: 15px;
}

.gtb-woordsoort.checkbox-inline {
    display: block;
}
.gtb-woordsoort.checkbox-inline+.gtb-woordsoort.checkbox-inline {
    margin-left: 0px;
    margin-top: 3px;
}

/* header */

.gtb-header {
    /* background: -webkit-linear-gradient(90deg, var(--main-blue) 10%, var(--header-gradient) 90%); 
    background:    -moz-linear-gradient(90deg, var(--main-blue) 10%, var(--header-gradient) 90%); 
    background:     -ms-linear-gradient(90deg, var(--main-blue) 10%, var(--header-gradient) 90%); 
    background:      -o-linear-gradient(90deg, var(--main-blue) 10%, var(--header-gradient) 90%); 
    background:         linear-gradient(90deg, var(--main-blue) 10%, var(--header-gradient) 90%);  */

    background-color: var(--dark-blue);

    height: 150px;
    margin-bottom: 40px;

    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.15);
    
    font-family: "schoolboek";
    
    transition: height 0.15s;
}

.gtb-header > .container {
    height: 100%;
    display: flex;
}

.gtb-header-flex-container {
    max-height: 100%;
    display: flex;
}

.gtb-header-logo {
    height: 92%;
    width: auto;
    margin-right: 5px;
}

.gtb-header-spacer {
    height: 100%;
    flex-basis: 15px;
    flex-grow: 0.5;
    max-width: 35px;
}
/* ... */

